Fix class param reference and add in ability to autofocus the main chat input as well as submit on return - as well as return + shift will produce a line break.

--- a/src/app.css
+++ b/src/app.css
@@ -553,6 +553,7 @@ textarea {
 .switch input {
   position: absolute;
   opacity: 0;
+  cursor: url('./assets/cursor-pointer.svg'), pointer;
 }
 
 .switch {
@@ -575,6 +576,7 @@ textarea {
   -webkit-transition: all 300ms;
      -moz-transition: all 300ms;
           transition: all 300ms;
+  cursor: url('./assets/cursor-pointer.svg'), pointer;
 }
 
 .switch input:checked + div {
